syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "ApiComparison.GrpcAPI";

package apicomparison;

service Account {
  rpc GetAccount (Id) returns (AccountResponseDto);
  rpc GetAccounts (AccountRequestDto) returns (AccountListResponseDto);
  rpc PostAccount (AccountRequestDto) returns (AccountResponseDto);
  rpc PutAccount (AccountPutRequestDto) returns (google.protobuf.Empty);
  rpc DeleteAccount (Id) returns (google.protobuf.Empty);
}

message Id{
	string id = 1;
}

message AccountRequestDto {
  string username = 1;
  string password = 2;
  string email = 3;
}

message AccountPutRequestDto {
  Id id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
}

message AccountResponseDto {
  string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
}

message AccountListResponseDto {
	repeated AccountResponseDto items = 1;
}
