syntax = "proto3";

import "Protos/account.proto";

option csharp_namespace = "ApiComparison.GrpcAPI";

package apicomparison;


service Address {
  rpc GetAddress (AddressRequestDto) returns (AddressResponseDto);
  rpc GetAccounts (AddressRequestDto) returns (AddressListResponseDto);
  rpc PostAccount (AddressRequestDto) returns (AddressResponseDto);
  rpc PutAccount (AddressRequestDto) returns (AddressResponseDto);
}

message AddressRequestDto {
  string street = 1;
  string street_number = 2;
  string city = 3;
  string userId = 4;
}

message AddressResponseDto {
  string id = 1;
  string street = 2;
  string street_number = 3;
  string city = 4;
  UserResponseDto user = 5;
}

message AddressListResponseDto {
	repeated AddressResponseDto items = 1;
}

service User {
  rpc GetIngredient (UserRequestDto) returns (UserResponseDto);
  rpc GetIngredients (UserRequestDto) returns (UserListResponseDto);
  rpc PostIngredient (UserRequestDto) returns (UserResponseDto);
  rpc PutIngredient (UserRequestDto) returns (UserResponseDto);
}

message UserRequestDto {
  string first_name = 1;
  string last_name = 2;
  string bio = 3;
  string account_id = 4;
  string address_id = 5;
}

message UserResponseDto {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string bio = 4;
  AccountResponseDto account_response_dto = 5;
  AddressResponseDto address_response_dto = 6;
}

message UserListResponseDto {
 repeated UserResponseDto items = 1;
}